; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_add_reflogs_to_pending.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_add_reflogs_to_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }
%struct.all_refs_cb = type { i32, i32*, %struct.rev_info* }

@handle_one_reflog = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_reflogs_to_pending(%struct.rev_info* %0, i32 %1) #0 {
  %3 = alloca %struct.rev_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.all_refs_cb, align 8
  store %struct.rev_info* %0, %struct.rev_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %7 = getelementptr inbounds %struct.all_refs_cb, %struct.all_refs_cb* %5, i32 0, i32 2
  store %struct.rev_info* %6, %struct.rev_info** %7, align 8
  %8 = load i32, i32* %4, align 4
  %9 = getelementptr inbounds %struct.all_refs_cb, %struct.all_refs_cb* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 8
  %10 = getelementptr inbounds %struct.all_refs_cb, %struct.all_refs_cb* %5, i32 0, i32 1
  store i32* null, i32** %10, align 8
  %11 = load i32, i32* @handle_one_reflog, align 4
  %12 = call i32 @for_each_reflog(i32 %11, %struct.all_refs_cb* %5)
  %13 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %14 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %2
  %18 = call i32 @add_other_reflogs_to_pending(%struct.all_refs_cb* %5)
  br label %19

19:                                               ; preds = %17, %2
  ret void
}

declare dso_local i32 @for_each_reflog(i32, %struct.all_refs_cb*) #1

declare dso_local i32 @add_other_reflogs_to_pending(%struct.all_refs_cb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
